--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^7.1.9",
     "mongodb": "^2.2.11",
     "mongoose": "^4.7.0",
+    "nodemailer": "^2.6.4",
     "path": "^0.12.7"
   }
 }
